--- a/package.json
+++ b/package.json
@@ -12,9 +12,23 @@
         "clear-code": "npx prettier --write **/*.{js,jsx,ts,tsx,json} && npx prettier --write *.{js,jsx,ts,tsx,json} && tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./"
     },
     "dependencies": {
+        "@native-base/icons": "^0.0.11",
+        "@os-team/i18next-react-native-language-detector": "^1.0.22",
+        "@react-navigation/native": "^6.1.6",
+        "@react-navigation/native-stack": "^6.9.12",
         "airbnb": "^0.0.2",
-        "react": "18.1.0",
-        "react-native": "0.70.6"
+        "base-64": "^1.0.0",
+        "i18next": "^22.4.11",
+        "native-base": "^3.4.28",
+        "react": "18.2.0",
+        "react-native": "0.71.3",
+        "react-native-ble-plx": "^2.0.3",
+        "react-native-linear-gradient": "^2.6.2",
+        "react-native-safe-area-context": "^3.3.2",
+        "react-native-screens": "^3.20.0",
+        "react-native-svg": "^12.1.1",
+        "react-navigation": "^4.4.4",
+        "rxjs": "^7.8.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
