--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
   "dependencies": {
     "@native-base/icons": "^0.0.11",
     "@react-navigation/native": "^6.1.6",
+    "base-64": "^1.0.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-prettier": "^4.2.1",
+    "i18next": "^22.4.12",
     "native-base": "^3.4.28",
     "prettier": "^2.8.4",
     "react": "18.1.0",
     "react-native": "0.70.6",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native-ble-plx": "^2.0.3",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
