--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@native-base/icons": "^0.0.11",
+        "@os-team/i18next-react-native-language-detector": "^1.0.22",
         "@react-navigation/native": "^6.1.6",
         "@react-navigation/native-stack": "^6.9.12",
         "base-64": "^1.0.0",
@@ -23,6 +24,7 @@
         "native-base": "^3.4.28",
         "prettier": "^2.8.4",
         "react": "18.1.0",
+        "react-i18next": "^12.2.0",
         "react-native": "0.70.6",
         "react-native-ble-plx": "^2.0.3",
         "react-native-linear-gradient": "^2.6.2",
