--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "mobileapplication",
+    "type": "module",
     "version": "0.0.1",
     "private": true,
     "scripts": {
@@ -21,6 +22,7 @@
         "eslint-import-resolver-typescript": "^3.5.3",
         "eslint-plugin-prettier": "^4.2.1",
         "i18next": "^22.4.12",
+        "mssql": "^9.1.1",
         "native-base": "^3.4.28",
         "prettier": "^2.8.4",
         "react": "18.1.0",
@@ -31,7 +33,9 @@
         "react-native-safe-area-context": "^3.3.2",
         "react-native-screens": "^3.20.0",
         "react-native-svg": "^12.1.1",
-        "rxjs": "^7.8.0"
+        "rxjs": "^7.8.0",
+        "swagger-ui-express": "^4.6.3",
+        "yamljs": "^0.3.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
@@ -45,6 +49,7 @@
         "@typescript-eslint/eslint-plugin": "^5.55.0",
         "@typescript-eslint/parser": "^5.55.0",
         "babel-jest": "^26.6.3",
+        "dotenv": "^16.1.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-import": "^2.27.5",
