--- a/src/back-end/SQL_Azure/.env.development
+++ b/src/back-end/SQL_Azure/.env.development
@@ -1,5 +1,5 @@
-AZURE_SQL_SERVER=<YOURSERVERNAME>.database.windows.net
-AZURE_SQL_DATABASE=<YOURDATABASENAME>
+AZURE_SQL_SERVER=textronics-3.database.windows.net
+AZURE_SQL_DATABASE=tekstronika-3
 AZURE_SQL_PORT=1433
-AZURE_SQL_USER=<YOURUSERNAME>
-AZURE_SQL_PASSWORD=<YOURPASSWORD>
+AZURE_SQL_USER=AnnaBilska0908
+AZURE_SQL_PASSWORD=#Megusta20
