--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@os-team/i18next-react-native-language-detector": "^1.0.22",
         "@react-navigation/native": "^6.1.6",
         "@react-navigation/native-stack": "^6.9.12",
+        "axios": "^1.4.0",
         "base-64": "^1.0.0",
         "eslint-config-prettier": "^8.7.0",
         "eslint-import-resolver-typescript": "^3.5.3",
@@ -27,6 +28,7 @@
         "react-i18next": "^12.2.0",
         "react-native": "0.70.6",
         "react-native-ble-plx": "^2.0.3",
+        "react-native-chart-kit": "^6.12.0",
         "react-native-linear-gradient": "^2.6.2",
         "react-native-safe-area-context": "^3.3.2",
         "react-native-screens": "^3.20.0",
